wrote more to the Ymal file and little bit fixing to source code
to get all players, the motore engine already has a method under the LudoGame class to do that, GetPlayers()
